--- a/html/wp-content/themes/photoktmkazi/css/main.css
+++ b/html/wp-content/themes/photoktmkazi/css/main.css
@@ -71,7 +71,14 @@ h3 {
 .btn.btn-primary:hover {
   background-color: #017fb5;
 }
-
+.navbar-fixed-top .navbar-right li a{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 17px;
+}
+.navbar-nav li a{
+  font-family:'NeuzeitSLTW01-BookHeavy';
+}
 .navbar-nav li a:hover, 
 .navbar-nav li a:focus {
   outline:none;
@@ -141,7 +148,7 @@ section p{
   position: absolute;
   top: 50%;
   margin-top: -104px;
-  left: 200px;
+  left: 0px;
   right: 0;
   text-align: center;
   text-transform: uppercase;
@@ -149,6 +156,11 @@ section p{
   font-size: 18px;
   font-weight: 300;
   color: #fff;
+}
+@media(min-width:768px){
+  #home-slider .caption {
+    left: 200px;
+  }
 }
 
 #home-slider .caption h1 {
@@ -172,9 +184,15 @@ section p{
   color: #000;
   font-size: 12px;
   margin-top: -60px;
-  margin-left: -180px;
+  margin-left: 0px;
+  text-align: left;
 }
-
+@media(min-width:377px){
+  .fadeInRightBig {
+    text-align: center;
+    margin-left: -180px;   
+  }
+}
 .caption .btn-start:hover {
   color: #fff
 }
@@ -270,7 +288,7 @@ section p{
   animation: bounce 3000ms infinite;
 }
 ul.nav{
-    margin-top:150px;
+    /*margin-top:150px;*/
 }
 
 
@@ -287,13 +305,41 @@ ul.nav{
 
 .navbar-right li.active a {
   background-color: rgba(0,0,0,.2);
+  color: #f841b3;
+}
+.navbar-right li a{
+  color: #FFF;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .nav>li{
-    float:none;
+    /*float:none;*/
+}
+.navbar-fixed-top .navbar-brand{
+  padding-top: 0;
+}
+.navbar-fixed-top .navbar-brand h1 img{
+  width: 87px;
+}
+@media(min-width:768px){
+ .navbar-fixed-top .navbar-brand h1 img{
+    width: 109px;
+  }
+  .main-nav .nav li a{
+    font-size: 13px;
+  }
+}
+@media(min-width:992px){
+  .main-nav .nav li a{
+    font-size: 17px;
+  }
 }
 .navbar-brand h1 {
   margin-top: 5px;
+}
+.navbar-brand h1 img{
+  width: 122px;
 }
 
 /*************************
@@ -314,6 +360,7 @@ ul.nav{
 section h2{
     font-size:30px;
     color:#f841b3;
+    margin-bottom: 10px;
 }
 section h3{
   background:url(../images/headback.png) no-repeat;   
@@ -363,7 +410,7 @@ section#blog h3{
 #about-us {
   background-image: url(../images/back1.jpg);
   padding: 60px 0;
-    height:520px;
+  /*height:520px;*/
     color:#fff;
 }
 
@@ -379,6 +426,9 @@ section#blog h3{
 
 #about-us h1 {
   margin-bottom: 30px;
+}
+#about-us ul{
+  list-style: none;
 }
 
 .progress{
@@ -906,21 +956,24 @@ section#blog h3{
 }
 
 #google-map {
+  width: 100%;
   height: 350px;
 }
 
 #contact-us {
   background-image:url(../images/back1.jpg);
   padding-bottom: 90px; 
+  padding-top: 0;
 }
 
 #contact-us .heading {
   padding-top: 95px;
+  padding-bottom: 30px;
 }
 
 .form-control {
   background-color: transparent;
-  border-color: rgba(255,255,255,.1);
+  border-color: #848484;
   height: 50px;
   border-radius: 0;
   box-shadow: none;
@@ -936,7 +989,7 @@ textarea.form-control {
 }
 
 .contact-info {
-  padding-left:70px;
+  /*padding-left:70px;*/
   font-weight: 300;
 }
 
@@ -945,14 +998,19 @@ ul.address {
   list-style: none;
   padding: 0;
   margin: 0;
+  font-size: 14px;
 }
-
+.address .fa{
+  margin-left: -15px;
+  margin-right: 5px;
+}
 .contact-info ul li {
   margin-bottom: 8px;
 }
 
 .contact-info ul li a {
   color: #fff;
+  font-weight: normal;
 }
 
 .btn-submit {
@@ -1028,5 +1086,15 @@ ul.address {
 }
 
 /*Presets*/
-
+/* submit-form */
+#submit-form ul, #visit-kathmandu ul{
+  list-style: none;
+}
+#submit-form ul li , #visit-kathmandu ul li{
+  font-size: 14px;
+  color: #848484;
+}
+#visit-kathmandu ul li{
+  color: #000;
+}
 
