support blog overflow hidden.

--- a/html/wp-content/themes/photoktmkazi/css/main.css
+++ b/html/wp-content/themes/photoktmkazi/css/main.css
@@ -1098,3 +1098,10 @@ ul.address {
   color: #000;
 }
 
+#support .entry-header{
+  padding-left: 0;
+  padding-right: 0;
+}
+#support .blog-posts{
+  overflow: hidden;
+}
