--- a/html/wp-content/themes/photoktmkazi/css/main.css
+++ b/html/wp-content/themes/photoktmkazi/css/main.css
@@ -996,7 +996,7 @@ textarea.form-control {
 ul.address {
   margin-top: 30px;
   list-style: none;
-  padding: 0;
+  padding: 0 0 0 15px;
   margin: 0;
   font-size: 14px;
 }
@@ -1104,4 +1104,8 @@ ul.address {
 }
 #support .blog-posts{
   overflow: hidden;
+}
+#partner-logo{
+  background-color: #FFF;
+  padding: 30px 0;
 }
