--- a/html/wp-content/themes/photoktmkazi/css/main.css
+++ b/html/wp-content/themes/photoktmkazi/css/main.css
@@ -12,7 +12,7 @@
 **************************/
 
 body {
-  font-family: 'Helvetica', serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 14px;
   line-height: 24px;
   color: #666;
@@ -22,14 +22,21 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color: #333;
 }
+.white-bg h1, .white-bg h2, .white-bg h3, .white-bg h4, .white-bg h5, .white-bg h6 {
+  color: #333;
+}
 
 h2 {
   font-size: 30px;
   margin-bottom: 20px;
+  text-transform: uppercase;
+  color: #F841B3;
+  font-weight: normal;
 }
 
 h3 {
   font-size: 18px;
+  text-transform: uppercase;
 }
 
 .parallax {
@@ -47,6 +54,15 @@ h3 {
 .parallax h5,
 .parallax h6 {
   color: #fff;
+}
+.white-bg,
+.white-bg h1,
+.white-bg h2,
+.white-bg h3,
+.white-bg h4,
+.white-bg h5,
+.white-bg h6 {
+  color: #000;
 }
 
 .parallax input[type="text"],
@@ -76,9 +92,20 @@ h3 {
   padding-bottom: 20px;
   font-size: 17px;
 }
+.main-nav .logo-lg{
+  display: block;
+  margin-top: -7px;
+}
+.navbar-fixed-top .logo-lg, .main-nav .logo-sm{
+  display: none;
+}
+.navbar-fixed-top .logo-sm{
+  display: block;
+}
+
 .navbar-nav li a{
   /*font-family:'NeuzeitSLTW01-BookHeavy';*/
-  font-family: 'Helvetica', serif;
+  font-family: 'Raleway', sans-serif;
 }
 .navbar-nav li a:hover, 
 .navbar-nav li a:focus {
@@ -110,7 +137,8 @@ section {
   padding-bottom:90px;
 }
 section p{
-    font-size:14px;
+    font-size:13px;
+    line-height: 22px;
     color:#848484;
 }
 .preloader {
@@ -278,7 +306,7 @@ section p{
   position: absolute;
   left: 50%;
   bottom: 50px;
-  color: #fff;
+  color: #f841b3;
   display: inline-block;
   width: 24px;
   margin-left: -12px;
@@ -317,32 +345,45 @@ ul.nav{
 .nav>li{
     /*float:none;*/
 }
+.navbar-brand{
+  padding-left: 0;
+}
 .navbar-fixed-top .navbar-brand{
-  padding-top: 0;
+  padding-top: 4px;
 }
 .navbar-fixed-top .navbar-brand h1 img{
-  width: 87px;
+  /*width: 87px;*/
 }
 @media(min-width:768px){
  .navbar-fixed-top .navbar-brand h1 img{
-    width: 109px;
+    /*width: 108px;*/
   }
   .main-nav .nav li a{
     font-size: 12px;
+    /*padding-left: 5px;
+    padding-right: 5px;*/
   }
 }
 @media(min-width:992px){
   .main-nav .nav li a{
-    font-size: 17px;
+    font-size: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 .navbar-brand h1 {
   margin-top: 5px;
 }
 .navbar-brand h1 img{
-  width: 122px;
+  width: 155px;
 }
-
+.navbar-brand h1 img.visible-md{
+  width: auto;
+  margin-top: 8px;
+}
+.navbar-fixed-top .navbar-brand h1 img.visible-md{
+  width: 108px;
+}
 /*************************
 ********Service CSS*******
 **************************/
@@ -358,18 +399,21 @@ ul.nav{
   -webkit-transition: background-color 0.2s ease;
   transition: background-color 0.2s ease;
 }
-section h2{
+section h2, .white-bg h2{
     font-size:30px;
+    font-weight: normal;
     color:#f841b3;
-    margin-bottom: 10px;
+    margin-bottom: 45px;
 }
 section h3{
   background:url(../images/headback.png) no-repeat;   
-  font-size:25px;
+  font-size:14px;
+  font-weight: bold;
   padding-left: 38px;
-  height: 100px;
-  padding-top: 40px;
+  padding-bottom: 20px;
+  padding-top: 0px;
   margin-left: -38px;
+  font-family: 'Raleway', sans-serif;
 }
 section#blog h3{
   background-image:none;   
@@ -586,12 +630,12 @@ section#blog h3{
 /*************************
 *****Visit Kathmandu******
 **************************/
-#visit-kathmandu{
+.pink-bg{
     background:#f841b3;
-    color:#000;
+    color:#FFF;
 }
-#visit-kathmandu p{
-    color:#000;
+.pink-bg p{
+    color:#FFF;
 }
 
 /*************************
@@ -962,14 +1006,16 @@ section#blog h3{
 }
 
 #contact-us {
-  background-image:url(../images/back1.jpg);
+  /*background-image:url(../images/back1.jpg);*/
   padding-bottom: 90px; 
   padding-top: 0;
 }
 
 #contact-us .heading {
   padding-top: 95px;
-  padding-bottom: 30px;
+  padding-bottom: 0px;
+  padding-top: 90px;
+  padding-left: 0;
 }
 
 .form-control {
@@ -997,7 +1043,7 @@ textarea.form-control {
 ul.address {
   margin-top: 30px;
   list-style: none;
-  padding: 0 0 0 15px;
+  padding: 0;
   margin: 0;
   font-size: 14px;
 }
@@ -1088,17 +1134,35 @@ ul.address {
 
 /*Presets*/
 /* submit-form */
-#submit-form ul, #visit-kathmandu ul{
+#submit-form ul, #visit-kathmandu ul, .pink-bg ul, .white-bg ul{
   list-style: none;
 }
-#submit-form ul li , #visit-kathmandu ul li{
-  font-size: 14px;
-  color: #848484;
+.pink-bg ul.bullet-list li, .white-bg ul.bullet-list li{
+  position: relative;
+  padding-left: 15px;
 }
-#visit-kathmandu ul li{
-  color: #000;
+section ol{
+  padding-left: 18px;
+  font-size: 14px;
+}
+.pink-bg ul.bullet-list li:before, .white-bg ul.bullet-list li:before{
+  position: absolute;
+  left: 0;
+  top: 0px;
+  content: "-";
 }
 
+#submit-form ul li , .pink-bg ul li, .white-bg ul li{
+  font-size: 13px;
+  color: #FFF;
+  position: relative;
+}
+.pink-bg ul li{
+  color: #FFF;
+}
+.white-bg ul li{
+  color: #000;
+}
 #support .entry-header{
   padding-left: 0;
   padding-right: 0;
@@ -1108,5 +1172,51 @@ ul.address {
 }
 #partner-logo{
   background-color: #FFF;
-  padding: 30px 0;
+  padding: 50px 0 30px 0;
+
+}
+
+/*2col template*/
+@media(min-width:992px){
+  .col-right{
+  padding-left: 50px;
+  }
+  .col-left{
+  padding-right: 50px;
+  }
+}
+.parallax-window{
+    min-height: 300px;
+    background: transparent;
+}
+#mti_wfs_colophon{
+  visibility: hidden;
+}
+.pink-bg h2, .pink-bg h3{
+  color: #FFF;
+}
+.white-bg h3{
+  background-image: none;
+}
+.white-bg p{
+  color: #000;
+}
+.pink-bg p a, .white-bg p a, .pink-bg li a{
+  color: #FFF;
+  text-decoration: underline;
+}
+.pink-bg p a:hover, .white-bg p a:hover, .pink-bg li a:hover{
+  text-decoration: none;
+}
+.white-bg p a, .white-bg ul li a{
+  color: #000;
+}
+.white-bg ul {
+
+}
+body p .btn{
+  text-decoration: none;
+}
+.pink-bg .btn.btn-primary:hover, .pink-bg .btn-submit:hover{
+  background-color: #666666;
 }
