--- a/html/wp-content/themes/photoktmkazi/style.css
+++ b/html/wp-content/themes/photoktmkazi/style.css
@@ -59,7 +59,7 @@ Text Domain: photoktm
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
 	border: 0;
-	font-family: Myriad Pro, Helvetica;
+	font-family: 'Raleway', sans-serif;
 	font-size: 100%;
 	font-style: inherit;
 	font-weight: inherit;
