--- a/style.css
+++ b/style.css
@@ -67,6 +67,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	outline: 0;
 	padding: 0;
 	vertical-align: baseline;
+	font-size: 13px;
+    line-height: 22px;
 }
 
 html {
